Sync main to the current state of publish

--- a/02.sets_numbers_coordinates_distances.md
+++ b/02.sets_numbers_coordinates_distances.md
@@ -10,8 +10,9 @@ kernelspec:
   name: python3
 ---
 
-
 # 📖 Sets, numbers, coordinates, and distances
+
+<small>⏱ <span class="eta"></span> | <span class="words"></span> words</small>
 
 ## Sources and reading guide
 
@@ -80,8 +81,7 @@ If $A \in A$, then it must be the case that $A$ possesses property $\mathbb{A}$.
 We have a paradox. It cannot be the case that both $A \in A$ and $A \notin A$. 
 
 One possible resolution to Russell’s paradox is to not allow mathematical objects like this particular $A$ to be considered a set.
-
-Resolution to Russell's is axiomatic re-definition  of the set theory by Ernst Zermelo, Abraham Fraenkel and Thoralf Skolem in 1908-1920, known today as ZFC axiomatic set theory.
+Re-definition  of the set theory by Ernst Zermelo, Abraham Fraenkel and Thoralf Skolem in 1908-1920, known today as ZFC axiomatic set theory.
 
 ### Some common number sets
 
@@ -200,15 +200,16 @@ Some (but not all) of the subsets of the real line take the form of an interval.
 Let $a \in \mathbb{R}, b \in \mathbb{R} \text{ and } a < b$.
 There are four types of intervals: 
 
-- $[a, b] = {x \in \mathbb{R} : a \leqslant x \leqslant b}$  
+- $[a, b] = \{x \in \mathbb{R} : a \leqslant x \leqslant b\}$  
     - If $a > b$, then $[a, b] = \varnothing$
     - If $a = b$, then $[a, b] = \{a\} = \{b\}$
-- $(a, b) = {x \in \mathbb{R} : a < x < b}$
-    - If $a > b$, then $[a, b] = \varnothing$
-- $[a, b) = {x \in \mathbb{R} : a \leqslant x < b}$
-    - If $a > b$, then $[a, b] = \varnothing$
-- $(a, b] = {x \in \mathbb{R} : a < x \leqslant b}$
-    - If $a > b$, then $[a, b] = \varnothing$
+- $(a, b) = \{x \in \mathbb{R} : a < x < b\}$
+    - If $a > b$, then $(a, b) = \varnothing$
+    - If $a = b$, then $(a, b) = \varnothing$
+- $[a, b) = \{x \in \mathbb{R} : a \leqslant x < b\}$
+    - If $a > b$, then $[a, b) = \varnothing$
+- $(a, b] = \{x \in \mathbb{R} : a < x \leqslant b\}$
+    - If $a > b$, then $(a, b] = \varnothing$
 
 ## The real number system
 The system of real numbers is an algebraic structure known as a **complete ordered field**. Indeed, in a sense, it is the only complete ordered field in existence. Any other complete ordered field turns out to be “isomoporhic” to the real number system. (The term “isomorphic” is a mathematical version of “essentially the same”).
@@ -465,13 +466,30 @@ The Euclidean distance between these two points is given by the Euclidean distan
 :::{math}
 d (x, y) =  \sqrt{\sum_{i = 1}^{n} (y_i - x_i)^2} = \| y - x \|
 :::
-
 ```
 
-Note that when $n = 1$, so that $\mathbb{R}^n = \mathbb{R}$, we have
+Notation $\| \bullet \|$ in the definition is just a way to denote a distance function (metric).
+
+```{admonition} Sigma notation
+:class: caution
+
+Sigma notation is used to quickly write sums of elements index by $i$
+
 :::{math}
-d (x, y) = \sqrt{(y - x)^2} = \lvert y - x \rvert
+\sum_{i=1}^n A_i = \sum_{i\in \{1,\dots,n\}} A_i = A_1 + A_2 + \dots + A_n
 :::
+
+Sigma notation can be used with other operations as well, for example $\prod_{i=1}^{n} A_i$ denotes a product, $\times_{i=1}^{n} A_i$ denotes a Cartesian product, $\cup_{i=1}^{n} A_i$ denotes a inion and  $\cap_{i=1}^{n} A_i$ denotes an intersection of $A_i,\;\forall i\in\{1,\dots,n\}$.
+```
+
+
+
+Note that in scalar case when $n = 1$, so that $\mathbb{R}^n = \mathbb{R}$, we have
+:::{math}
+x,y \in \mathbb{R} d (x, y) = \sqrt{(y - x)^2} = \lvert y - x \rvert
+:::
+and the distance becomes just the absolute value of the difference between the two points.
+
 
 ### Properties of distance metrics
 
@@ -768,7 +786,7 @@ Examples: exclusion/set difference
 ````{admonition} Example: Set complement
 :class: tip
 
-Suppose that the universal set is $U = {1, 2, 3}$. The power set for the set $U$ in this example is
+Suppose that the universal set is $U = \{1, 2, 3\}$. The power set for the set $U$ in this example is
 ```{math}
 2^U = \{\varnothing, \{1\} , \{2\} , \{3\} , \{1, 2\} , \{1, 3\} , \{2, 3\} , \{1, 2, 3\}\} .
 ```
@@ -1084,4 +1102,23 @@ If the numeraire basket consists of one unit of each of the $n$ final commoditie
 This set is known as a price “simplex”.
 the three commodity case.*
 
+````{admonition} Hand written notes from the lecture
+:class: note
+
+```{image} _static/img/notes/27feb/1.png
+   :width: 75%
+```
+```{image} _static/img/notes/27feb/2.png
+   :width: 75%
+```
+```{image} _static/img/notes/27feb/3.png
+   :width: 75%
+```
+
+````
+
+
+```{dropdown} Further reading and self-learning
+- **Veritasium** video on paradoxes of set theory and mathematical incompleteness [YouTube](https://youtu.be/HeQX2HjkcNo)
+```
 
