More plots in Lecture 3

--- a/03.mappings_functions_correspondences.md
+++ b/03.mappings_functions_correspondences.md
@@ -442,6 +442,14 @@ There are also multivariate versions of these types of functions.
 
 ### Polynomial functions
 
+```{figure} _static/img/lecture_03/fun_poly.png
+:width: 80%
+:align: center
+
+Graphs of polynomial functions
+```
+
+
 ```{admonition} Definition
 :class: caution
 
@@ -517,7 +525,15 @@ Clearly, when $a_0 \ne 0$, the definition of a linear function is not satisfied.
 
 Using this more precise terminology, the family of linear functions is a proper subset of the family of affine functions. Note that we assume that $a_1 \in \mathbb{R} \setminus \{0\}$ in both cases.
 
+
 ### Exponential functions
+
+```{figure} _static/img/lecture_03/fun_exp.png
+:width: 80%
+:align: center
+
+Graphs of exponential functions
+```
 
 ```{admonition} Definition
 :class: caution
@@ -575,6 +591,15 @@ $$
 $$
 
 ### Power functions
+
+```{figure} _static/img/lecture_03/fun_power.jpg
+:width: 80%
+:align: center
+
+Graphs of power functions
+```
+
+
 ```{admonition} Definition
 :class: caution
 
@@ -615,6 +640,14 @@ $$
 
 
 #### A rectangular hyperbola
+
+```{figure} _static/img/lecture_03/fun_hyp.png
+:width: 80%
+:align: center
+
+Graphs of hyperbola
+```
+
 Consider the function $f : \mathbb{R} \setminus \{0\} \rightarrow \mathbb{R}$ defined by $f(x) = \frac{a}{x}$, where $a \ne 0$. This is a special type of power function, as can be seen by noting that it can be rewritten as $f(x) = ax^{−1}$. The equation for the graph of this function is
 
 $$
@@ -625,6 +658,13 @@ Note that this equation can be rewritten as $xy = a$. This is the equation of a 
 - Economic application: A constant “own-price elasticity of demand” demand curve.
 
 ### Logarithms
+
+```{figure} _static/img/lecture_03/fun_log.png
+:width: 100%
+:align: center
+
+Graphs of logarithmic function
+```
 
 ```{admonition} Definition
 :class: caution
