Additions for lecture 3, problem set beta

--- a/03.mappings_functions_correspondences.md
+++ b/03.mappings_functions_correspondences.md
@@ -10,6 +10,21 @@ kernelspec:
   name: python3
 ---
 
+````{admonition} Announcements & Reminders
+:class: note
+:class: dropdown
+
+- **March 11, next Monday** is the first online test (10% of final grade)
+- **8:00 in the morning till 23:59**
+- Take only once, will need 30 min 
+- Will automatically submit after 30 min
+- Compulsory!
+- Will cover materials up to and including this lecture
+- You will get email notification from Wattle
+- There will be a practice test to help you familiarize yourself with the system
+````
+
+
 # 📖 Mappings: functions and correspondences
 
 <small>⏱ <span class="eta"></span> | <span class="words"></span> words</small>
