Updates after the lecture

--- a/03.desmos.md
+++ b/03.desmos.md
@@ -10,7 +10,7 @@ kernelspec:
   name: python3
 ---
 
-# ☕️ Function graphing: Desmos.com
+# ☕️ Graphing tool
 
 <small>⏱ <span class="eta"></span> | <span class="words"></span> words</small>
 
