Sync in changes made on publish (leaving toc with full set of lectures)

--- a/03.mappings_functions_correspondences.md
+++ b/03.mappings_functions_correspondences.md
@@ -10,6 +10,21 @@ kernelspec:
   name: python3
 ---
 
+````{admonition} Announcements & Reminders
+:class: note
+:class: dropdown
+
+- **March 11, next Monday** is the first online test (10% of final grade)
+- **8:00 in the morning till 23:59**
+- Take only once, will need 30 min 
+- Will automatically submit after 30 min
+- Compulsory!
+- Will cover materials up to and including this lecture
+- You will get email notification from Wattle
+- There will be a practice test to help you familiarize yourself with the system
+````
+
+
 # 📖 Mappings: functions and correspondences
 
 <small>⏱ <span class="eta"></span> | <span class="words"></span> words</small>
@@ -127,6 +142,10 @@ It is possible for a point $y \in Y$ to have either
 - a unique pre-image, or 
 - multiple pre-images. 
 
+```{note}
+The term `multiple` (image and pre-image) is equivalent to pre-image be a set of muliple points.
+```
+
 > If a point $y \in Y$ has a unique pre-image under the mapping $f$, then it is denoted by $f^{−1}(y)$.
 
 The *pre-image of the set* $B \subseteq Y$ under $f$ is the set $f^{−1}(B) = \{x \in X : f(x) \in B\}$.
@@ -154,7 +173,7 @@ There are four basic types of mappings. These are as follows.
     - Each point in $Y$ has either a unique pre-image in $X$ or no pre-image in $X$.
     - example: $f(x) = \{e^x,-e^x\}$
 
-- A many-to-many mapping:
+4. A many-to-many mapping:
     - At least one point in $X$ has multiple images in $Y$; and
     - At least one point in $Y$ has multiple pre-images in $X$.
     - example: $f(x) = \{x,x+1,x+2,\dots\}$
@@ -190,13 +209,6 @@ Consider a mapping $f : X \rightarrow Y$. Clearly we must have $f(X) \subseteq Y
 If $f(X) = Y$ and $f$ is a function, then we call $f$ a **surjection**.
 ```
 
-```{admonition} Definition
-:class: caution
-
-A mapping that is both an injection and a surjection is called a **bijection**. In other words, a function that is *both one-to-one and onto* is called a bijection.
-
-```
-
 ### One-to-one
 
 ```{admonition} Definition
@@ -229,9 +241,35 @@ Examples:
 ```{admonition} Example
 :class: tip
 
-Consider the mapping $f: \mathbb{R} \rightarrow \mathbb{R}$ defined by $f(x) = x$. This is sometimes called the identity map. Note that $f$ is both onto and one-to-one. This means that $f$ is a bijection. It also means that the pre-image of $f$ is an inverse function.
+Consider the mapping $f: \mathbb{R} \rightarrow \mathbb{R}$ defined by $f(x) = x$. This is sometimes called the identity map. Note that $f$ is both onto and one-to-one. This means that $f$ is a bijection. It also means that the pre-image of $f$ is an inverse *function*.
 
 ```
+
+```{admonition} Definition
+:class: caution
+
+A mapping that is both an injection and a surjection is called a **bijection**. In other words, a function that is *both one-to-one and onto* is called a bijection.
+
+```
+
+```{admonition} Fact
+:class: important
+
+If $f: X \to Y$ a bijection, then there exists a unique
+function $\phi: Y \to X$ such that 
+%
+$$
+\phi(f(a)) = a, \quad \forall \; a \in X
+$$
+
+That function $\phi$ is called the **inverse** of $f$ and written $f^{-1}$
+```
+
+
+```{figure} _static/img/lecture_03/bijec.png
+:name: bijec
+```
+
 
 ```{admonition} Example
 :class: tip
@@ -310,7 +348,7 @@ Let $f: \mathbb{R} \rightarrow \mathbb{R}$ be a strictly increasing function. Co
 ```{admonition} Definition
 :class: caution
 
-Monotonic transformation of a give function is its composition with a a strictly increasing or strictly decreasing function.
+Monotonic transformation of a given function is its composition with a a strictly increasing or strictly decreasing function.
 ```
 
 
@@ -360,7 +398,7 @@ Z(x_1, x_2) = k(W((x_1, x_2)) = ln (x_1^\gamma x_2^{(1 - \gamma)})
 ```{admonition} Definition
 :class: caution
 
-A graph of a mapping $f \colon X \to Y$ is a set $\Gamma \subset X \times Y$ of points $x \in X$ and $y \in Y$ where it holds $f(x)=y$.
+A graph of a mapping $f \colon X \to Y$ is a set $\Gamma \subset X \times Y$ of points $x \in X$ and $y \in Y$ where it holds $y \in f(x)$, or $y = f(x)$ in hte case $f$ is a function.
 ```
 
 For the functions $\mathbb{R} \to \mathbb{R}$ a graph can be conveniently drawn on a plane.
@@ -442,6 +480,14 @@ There are also multivariate versions of these types of functions.
 
 ### Polynomial functions
 
+```{figure} _static/img/lecture_03/fun_poly.png
+:width: 80%
+:align: center
+
+Graphs of polynomial functions
+```
+
+
 ```{admonition} Definition
 :class: caution
 
@@ -517,7 +563,15 @@ Clearly, when $a_0 \ne 0$, the definition of a linear function is not satisfied.
 
 Using this more precise terminology, the family of linear functions is a proper subset of the family of affine functions. Note that we assume that $a_1 \in \mathbb{R} \setminus \{0\}$ in both cases.
 
+
 ### Exponential functions
+
+```{figure} _static/img/lecture_03/fun_exp.png
+:width: 80%
+:align: center
+
+Graphs of exponential functions
+```
 
 ```{admonition} Definition
 :class: caution
@@ -575,6 +629,15 @@ $$
 $$
 
 ### Power functions
+
+```{figure} _static/img/lecture_03/fun_power.jpg
+:width: 80%
+:align: center
+
+Graphs of power functions
+```
+
+
 ```{admonition} Definition
 :class: caution
 
@@ -615,6 +678,14 @@ $$
 
 
 #### A rectangular hyperbola
+
+```{figure} _static/img/lecture_03/fun_hyp.png
+:width: 80%
+:align: center
+
+Graphs of hyperbola
+```
+
 Consider the function $f : \mathbb{R} \setminus \{0\} \rightarrow \mathbb{R}$ defined by $f(x) = \frac{a}{x}$, where $a \ne 0$. This is a special type of power function, as can be seen by noting that it can be rewritten as $f(x) = ax^{−1}$. The equation for the graph of this function is
 
 $$
@@ -625,6 +696,13 @@ Note that this equation can be rewritten as $xy = a$. This is the equation of a 
 - Economic application: A constant “own-price elasticity of demand” demand curve.
 
 ### Logarithms
+
+```{figure} _static/img/lecture_03/fun_log.png
+:width: 100%
+:align: center
+
+Graphs of logarithmic function
+```
 
 ```{admonition} Definition
 :class: caution
@@ -927,5 +1005,21 @@ d(p_1, p_2, y) = (x_1^d (p_1, p_2, y), x_2^d(p_1, p_2, y))
 $$
 
 
+## Notes from the lecture
+
+````{admonition} Hand written notes from the lecture
+:class: note
+
+```{image} _static/img/notes/5mar/1.png
+   :width: 75%
+```
+```{image} _static/img/notes/5mar/2.png
+   :width: 75%
+```
+```{image} _static/img/notes/5mar/3.png
+   :width: 75%
+```
+
+````
 
 
