Update to reading guide sections

--- a/04.equations_inequalities_binary_relations.md
+++ b/04.equations_inequalities_binary_relations.md
@@ -1,14 +1,26 @@
-# Equations, inequalities, and binary relations
+````{admonition} Announcements & Reminders
+:class: note
+:class: dropdown
 
-## Sources and reading guide
+- Results of Online test 1
+- Question from Discussion forum: go over [examples of sets in economics](https://math.iskh.me/02.sets_numbers_coordinates_distances.html#examples-of-sets-in-economics)
+````
 
-```{dropdown} Sources and reading guide
+# 📖 Equations, inequalities, and binary relations
 
-Primary readings:
+<small>⏱ <span class="eta"></span> | <span class="words"></span> words</small>
 
-{cite:ps}`sydsaeter2016`: Chapters 2 and 3.
+````{dropdown} Sources and reading guide
 
-Other sources/readings are below.
+```{figure} _static/img/bibliography/shsc2016.png
+:width: 100px
+:align: left
+```
+{cite:ps}`sydsaeter2016`
+
+Chapters 2 and 3.
+
+<div style="clear: both"></div>
 
 Introductory level references:
 - {cite:ps}`bradley2013`: Chapters 1, 2, and 4.
@@ -24,7 +36,7 @@ More advanced references:
 - {cite:ps}`rubinstein2006`: Chapters 1-4 (pp. 1-51).
 - {cite:ps}`turnbull1952`
 - {cite:ps}`varian1992`: Chapter 7 (pp. 94-115).
-```
+````
 
 
 ## Equations, inequalities and binary relations
