--- a/07.linear_algebra.md
+++ b/07.linear_algebra.md
@@ -3,17 +3,19 @@
 # Vector and matrix arithmetic 
 
 
-## Sources and reading guide
+````{dropdown} Sources and reading guide
 
-```{dropdown} Sources and reading guide
+```{figure} _static/img/bibliography/shsc2016.png
+:width: 100px
+:align: left
+```
+{cite:ps}`sydsaeter2006`
+
+Chapter 15 (pp. 549-590).
+
+<div style="clear: both"></div>
 
 **Vector and matrix arithmetic section**
-
-Primary readings:
-
-{cite:ps}`sydsaeter2006`: Chapter 15 (pp. 549-590).
-
-Other readings/sources are below.
 
 - {cite:ps}`anton1987`: Chapters 1-3 (pp. 1-142).
 - {cite:ps}`asano2013`: Appendix A (pp. 218-242).
@@ -41,7 +43,7 @@ Other readings/sources are below.
 - {cite:ps}`sundaram1996`: Chapter 1 (Section 5).
 - {cite:ps}`takayama1993`: Chapter 1 (Section 4).
 
-```
+````
 
 
 
