--- a/08.multivariate_differential_calculus.md
+++ b/08.multivariate_differential_calculus.md
@@ -1,17 +1,17 @@
 # Multivariate differential calculus
 
 
-## Sources and reading guide
+````{dropdown} Sources and reading guide
 
-```{dropdown} Sources and reading guide
+```{figure} _static/img/bibliography/shsc2016.png
+:width: 100px
+:align: left
+```
+{cite:ps}`sydsaeter2016`
 
-This material does not originate with me. It has been drawn from, or influenced by, a number of sources. Some of these include those listed below.
+Chapters 11 and 12 (pp. 407-494).
 
-Primary readings:
-
-{cite:ps}`sydsaeter2016`: Chapters 11 and 12 (pp. 407-494).
-
-Other sources/readings are below.
+<div style="clear: both"></div>
 
 Introductory level references:
 - {cite:ps}`bradley2008`: Chapter 7, Sections 1 to 3 (pp. 360-408).
@@ -26,8 +26,7 @@ Intermediate mathematical economics textbooks:
 Mathematics textbooks:
 - {cite:ps}`spiegel1981a`: Chapters 4, 6, 7 and 8; pp. 57-79 and 101-179.
 - {cite:ps}`spiegel1981b`: Chapters 3 and 4; pp. 35-81.
-```
-
+````
 
 
 
