--- a/09.intro_to_optimisation.md
+++ b/09.intro_to_optimisation.md
@@ -1,17 +1,19 @@
 # Introduction to optimisation
 
 
-## Sources and reading guide
-
-```{dropdown} Sources and reading guide
+````{dropdown} Sources and reading guide
 
 **Introduction to optimisation section**
 
-Primary readings:
+```{figure} _static/img/bibliography/shsc2016.png
+:width: 100px
+:align: left
+```
+{cite:ps}`sydsaeter2016`
 
-{cite:ps}`sydsaeter2016`: Chapters 8, 13, and 14.
+Chapters 8, 13, and 14.
 
-Other sources/readings are below.
+<div style="clear: both"></div>
 
 Introductory level references:
 - {cite:ps}`bradley2008`: Chapter 7 (Section 4) (pp. 408-420).
@@ -49,7 +51,7 @@ Advanced level references:
 - {cite:ps}`takayama1993`: Chapters 2 and 3, and Appendices A and B.
 - {cite:ps}`varian1992`: Chapters 7, 8, and 9.
 
-```
+````
 
 
 
