--- a/10.univariate_integration.md
+++ b/10.univariate_integration.md
@@ -1,16 +1,18 @@
 # Univariate integration 
 
-## Sources and reading guide
+````{dropdown} Sources and reading guide
 
-```{dropdown} Sources and reading guide
+```{figure} _static/img/bibliography/shsc2016.png
+:width: 100px
+:align: left
+```
+{cite:ps}`sydsaeter2016`
+
+Chapter 9 (pp. 319-373).
+
+<div style="clear: both"></div>
 
 **Univariate integration section**
-
-Primary readings:
-
-{cite:ps}`sydsaeter2016`: Chapter 9 (pp. 319-373).
-
-Other sources/readings are below.
 
 These are references that are suitable for an elementary course on mathematical economics:
 - {cite:ps}`bradley2013`: Chapter 8 (pp. 427-476).
@@ -55,7 +57,7 @@ These are references that are suitable for a third-year undergraduate economics 
 - {cite:ps}`alchian1983`: pp. 63-64.
 - {cite:ps}`hamermesh2006`: Chapters 1, 2, and 7 (pp. 3-24 and 81-90).
 
-```
+````
 
 
 
