--- a/03.mappings_functions_correspondences.md
+++ b/03.mappings_functions_correspondences.md
@@ -35,11 +35,9 @@ kernelspec:
 :align: center
 ```
 
-
 ## Sources and reading guide
 
 ````{dropdown} Sources and reading guide
-Primary readings:
 
 ```{figure} _static/img/bibliography/shsc2016.png
 :width: 100px
@@ -49,7 +47,7 @@ Primary readings:
 
 Chapters 4, 5, 9.6 (pp. 350-351 only), 11.1, and 11.5.
 
-Other sources/readings are below. 
+<div style="clear: both"></div>
 
 Introductory mathematical economics references:
 - {cite:ps}`haeussler1987`: Chapters 0, 3, 4, 5, and 17.1.
