--- a/06.univariate_differentiation.md
+++ b/06.univariate_differentiation.md
@@ -2,13 +2,17 @@
 
 ## Sources and reading guide
 
-```{dropdown} Sources and reading guide
+````{dropdown} Sources and reading guide
 
-Primary readings:
+```{figure} _static/img/bibliography/shsc2016.png
+:width: 100px
+:align: left
+```
+{cite:ps}`sydsaeter2016`
 
-{cite:ps}`sydsaeter2016`: Chapters 6, 7, and 8.
+Chapters 6, 7, and 8.
 
-Other sources/readings are below.
+<div style="clear: both"></div>
 
 Introductory level references: 
 - {cite:ps}`bradley2008`: Chapter 6 (pp. 257–357).
@@ -23,7 +27,7 @@ More advanced references:
 - {cite:ps}`silverman1969`: Chapters 4, 5, and 6.
 - {cite:ps}`simon1994`: Chapters 2–5 (pp. 10–103).
 - {cite:ps}`spivak2006`: Chapters 3–12 (pp. 39–249).
-```
+````
 
 
 
