--- a/03.mappings_functions_correspondences.md
+++ b/03.mappings_functions_correspondences.md
@@ -435,7 +435,7 @@ It holds that:
 - for $a<0$ in addition graph $\Gamma_1$ flips around the horizontal axis
 - for $b \ne 1$, $b>0$ graph $\Gamma_1$ is a horizontal stretch or compression of $\Gamma_0$ by a factor of $|b|$
 - for $b<0$ in addition graph $\Gamma_1$ flips around the vertical axis
-- for $c \ne 0$ graph $\Gamma_1$ is a horizontal shift of $\Gamma_0$ by $c$, left for $c>0$ and right for $c<0$
+- for $c \ne 0$ graph $\Gamma_1$ is a horizontal shift of $\Gamma_0$ by $\frac{c}{b}$, left for $\frac{c}{b}>0$ and right for $\frac{c}{b}<0$
 - for $d \ne 0$ graph $\Gamma_1$ is a vertical shift of $\Gamma_0$ by $d$, up for $d>0$ and down for $d<0$
 
 ```
