Small updates to the rest of the lectures

--- a/06.univariate_differentiation.md
+++ b/06.univariate_differentiation.md
@@ -1,5 +1,7 @@
 # Univariate differentiation
 
+<small>⏱ <span class="eta"></span> | <span class="words"></span> words</small>
+
 ## Sources and reading guide
 
 ````{dropdown} Sources and reading guide
@@ -1106,6 +1108,72 @@ The two terms that make up marginal revenue for a monopolist can be given a very
 
 
 #### Point elasticities
+
+
+FROM LINEAR DEMAND
+
+The “point” own-price elasticity of demand is given by the formula
+
+$$
+\epsilon^D_P (P) = \left( \frac{P}{Q^D (P)} \right) (\text{slope}(Q^D (P)))
+$$
+Suppose that we have a linear demand curve of the form
+
+$$
+Q = a − bP
+$$
+where $a > 0$ and $b > 0$
+The slope of this demand curve is equal to $(−b)$
+As such, the point own-price elasticity of demand in this case is given by
+
+$$
+\begin{align*}
+\epsilon^D_P (P) &= \left( \frac{P}{a - bP} \right) (-b) \\
+&= \left( \frac{-bP}{a - bP} \right)
+\end{align*}
+$$
+
+Note that 
+
+$$
+\begin{align*}
+| \epsilon^D_P (P) | &= 1 \\
+\iff | \frac{-bP}{a - bP} | &= 1 \\
+\iff \frac{bP}{a - bP} &= 1 \\
+\iff bP &= a - bP \\
+\iff 2bP &= a \\
+\iff P &= \frac{a}{2b} \\
+\end{align*}
+$$
+
+More generally, we can show that, for the linear demand cuve above, we have
+
+$$
+| \epsilon^D_P (P) | =
+\begin{cases}
+\in (0, 1) \;\; \text{ if } P < \frac{a}{2b} \\
+= 1 \;\; \text{ if } P = \frac{a}{2b} \\
+\in (1, \infty) \;\; \text{ if } P > \frac{a}{2b} \\
+\end{cases}
+$$
+
+Since the demand curve above is downward sloping, this means that
+
+$$
+\epsilon^D_P (P) =
+\begin{cases}
+\in (-1, 0) \;\; \text{ if } P < \frac{a}{2b} \\
+= -1 \;\; \text{ if } P = \frac{a}{2b} \\
+\in (-\infty, -1) \;\; \text{ if } P > \frac{a}{2b} \\
+\end{cases}
+$$
+
+Illustrate this on the whiteboard
+
+
+---
+
+
 
 Suppose that $y=f(x)$. The **elasticity of $y$ with respect to $x$** is defined to be the percentage change in $y$ that is induced by a small percentage change in $x$.
 
