--- a/07.linear_algebra.md
+++ b/07.linear_algebra.md
@@ -1,5 +1,7 @@
 # Linear algebra
 
+<small>⏱ <span class="eta"></span> | <span class="words"></span> words</small>
+
 # Vector and matrix arithmetic 
 
 
