--- a/08.multivariate_differential_calculus.md
+++ b/08.multivariate_differential_calculus.md
@@ -1,5 +1,6 @@
 # Multivariate differential calculus
 
+<small>⏱ <span class="eta"></span> | <span class="words"></span> words</small>
 
 ````{dropdown} Sources and reading guide
 
@@ -30,7 +31,7 @@ Mathematics textbooks:
 
 
 
-### Our objective
+## Our objective
 
 We want to extend our discussion of differential calculus to a setting in which there is more than one choice variable. In other words, we want to examine multivariate real-valued functions.
 
