--- a/09.intro_to_optimisation.md
+++ b/09.intro_to_optimisation.md
@@ -1,5 +1,6 @@
 # Introduction to optimisation
 
+<small>⏱ <span class="eta"></span> | <span class="words"></span> words</small>
 
 ````{dropdown} Sources and reading guide
 
