--- a/10.univariate_integration.md
+++ b/10.univariate_integration.md
@@ -1,5 +1,7 @@
 # Univariate integration 
 
+<small>⏱ <span class="eta"></span> | <span class="words"></span> words</small>
+
 ````{dropdown} Sources and reading guide
 
 ```{figure} _static/img/bibliography/shsc2016.png
