Correction in lecture 4

--- a/04.equations_inequalities.md
+++ b/04.equations_inequalities.md
@@ -6,7 +6,7 @@
 
 2. Question from Discussion forum: go over [examples of sets in economics](https://math.iskh.me/02.sets_numbers_coordinates_distances.html#examples-of-sets-in-economics)
 
-3. Orienteering at CBE on Wednesday March 13th
+3. Orienteering at CBE on Wednesday March 13th, 12:00, behind CBE building
 
 ```{figure} _static/misc/orient_anu.jpg
 :width: 30%
@@ -1054,7 +1054,9 @@ For $a,b,c,d \in \mathbb{R}$
 a>b \text{ and } b>c \Rightarrow a>c \\
 a>b \text{ and } c>0 \Rightarrow ac > bc \\
 a>b \text{ and } c<0 \Rightarrow ac < bc \\
-a>b \text{ and } c>d \Rightarrow a+c > b+d
+a>b \text{ and } c>d \Rightarrow a+c > b+d \\
+a>b \text{ and } f(x) \text{ is monotonically increasing} \Rightarrow f(a) > f(b) \\
+a>b \text{ and } g(x) \text{ is monotonically decreasing} \Rightarrow g(a) < g(b)
 \end{array}
 :::
 ```
