--- a/04.equations_inequalities.md
+++ b/04.equations_inequalities.md
@@ -106,7 +106,7 @@ f(x) \geqslant g(x) \; \Leftrightarrow \; -f(x) \leqslant -g(x)
 x^2-1 = (x+1)(x-1) \Leftrightarrow x^2 = (x+1)(x-1)+1
 :::
 :::{math}
-y^3-1 = (y-1)(y^2+y+1) \Leftrightarrow y^2+y+1 = \frac{y^3-1+1}{y-1} \text{ provided } y\ne 1
+y^3-1 = (y-1)(y^2+y+1) \Leftrightarrow y^2+y+1 = \frac{y^3-1}{y-1} \text{ provided } y\ne 1
 :::
 ```
 
