Link to orienteering

--- a/04.equations_inequalities.md
+++ b/04.equations_inequalities.md
@@ -6,7 +6,7 @@
 
 2. Question from Discussion forum: go over [examples of sets in economics](https://math.iskh.me/02.sets_numbers_coordinates_distances.html#examples-of-sets-in-economics)
 
-3. Orienteering at CBE on Wednesday March 13th, 12:00, behind CBE building
+3. Orienteering at CBE on Wednesday March 13th, 12:00, behind CBE building. [More information](https://www.eventbrite.com.au/e/cbe-orienteering-skills-development-tickets-805922514937?aff=oddtdtcreator)
 
 ```{figure} _static/misc/orient_anu.jpg
 :width: 30%
