--- a/04.equations_inequalities.md
+++ b/04.equations_inequalities.md
@@ -117,7 +117,7 @@ y^3-1 = (y-1)(y^2+y+1) \Leftrightarrow y^2+y+1 = \frac{y^3-1}{y-1} \text{ provid
 
 The solution to this equation $h(x) = 0$  or inequality $h(x) \leqslant 0$, where $h: X \to \mathbb{R}$ consists of the set of values of $x \in X$ that ensure the equality or inequality is satisfied, i.e. $S = \{x \in X : h(x)=0\}$ or $S = \{x \in X : h(x)\leqslant0\}$
 
-To find a solutions means to specify all elements of $S$ or to show that $S = \emptyset$
+To find a solutions means to specify all elements of $S$ or to show that $S = \varnothing$
 
 ```
 
@@ -506,8 +506,7 @@ This means that you need to be careful when moving from the equation for a deman
 ## Quadratic equations
 
 Consider the following polynomial of degree two:
-$$
-f(x) = ax^2 + bx + c$$
+$f(x) = ax^2 + bx + c$
 where $a \ne 0$. This is a quadratic function.
 The corresponding polynomial equation is a *quadratic equation*.
 
@@ -611,7 +610,7 @@ x_1 x_2 = c
 :::{math}
 \begin{array}{lcr}
 x^2 -3x + 2 = 0 && x_1=1, x_2=2 \\
-x^2 + x -2 = 0 && x_1=-1, x_2=2 \\
+x^2 + x -2 = 0 && x_1=1, x_2=-2 \\
 x^2 + -4 = 0 && x_1=2, x_2=-2 \\
 x^2 + 2x + 1 = 0 && x_1=-1, x_2=-1 \\
 \end{array}
@@ -759,6 +758,7 @@ The substitutions are due to the substitution $x \rightarrow x-\tfrac{b}{3a}$. W
 :::{math}
 \begin{array}{l}
 \big(x-\tfrac{b}{3a}\big)^3 + 
+\tfrac{b}{a}\big(x-\tfrac{b}{3a}\big)^2 + 
 \tfrac{c}{a}\big(x-\tfrac{b}{3a}\big) + 
 \tfrac{d}{a} = 0 \\
 x^3 + x^2 \big[ \tfrac{b}{a} - \tfrac{b}{a}\big]
@@ -1023,7 +1023,7 @@ a^3 - b^3 = (a - b)(a^2 + ab + b^2)
 :class: tip
 
 :::{math}
-x^5 - 2x^4 + x^4 - 2x^3 - 13x^3 + 28x^2 + 22x - 24 =0
+x^5 - x^4 -15 x^3 -23x^2 -26x -24 =0
 :::
 
 *Follow on the board*
