--- a/13_bisections_newton.ipynb
+++ b/13_bisections_newton.ipynb
@@ -8,7 +8,9 @@
     }
    },
    "source": [
-    "# ☕️ Numerical equation solving"
+    "# ☕️ Numerical equation solving\n",
+    "\n",
+    "**This chapter is for your information only, will not be part of the assessment**"
    ]
   },
   {
