Notes from the lecture

--- a/04.equations_inequalities.md
+++ b/04.equations_inequalities.md
@@ -1175,6 +1175,23 @@ x-3 > -1
 Solving the first inequality we have $x<5$ and solving the second we have $x>2$. Therefore the solution is $(2,5)$.
 ```
 
+## Notes from the lecture
+
+````{admonition} Hand written notes from the lecture
+:class: note
+
+```{image} _static/img/notes/12mar/1.png
+   :width: 75%
+```
+```{image} _static/img/notes/12mar/2.png
+   :width: 75%
+```
+```{image} _static/img/notes/12mar/3.png
+   :width: 75%
+```
+
+````
+
 
 ```{dropdown} Further reading and self-learning
 
